--- a/views/stylesheets/_forms.scss
+++ b/views/stylesheets/_forms.scss
@@ -5,6 +5,7 @@ input, textarea, select {
   margin-bottom: 15px;
   border: 1px solid #ddd;
   @include transition(border 0.5s);
+  line-height: 22px;
 
   &:focus {
     outline: 0;
